tests/negative/typecheck/select.orng
// select.orng:9:7: error: expected a value of type `Int`, got a value of type `Bool`
//     x.b
//      ^
// 
struct My_Type {a: Int, b: Bool}

fn main() -> Int {
    let x = My_Type(1, false)
    x.b
}